--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <header>
 	<nav>
 		<div class="nav-bar">
-			<a href="#" class="site-logo">PerkyScent</a>
+			<Span class="site-logo"><a href="#">PerkyScent</a></Span>
 			<ul class="site-nav-menu">
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About</a></li>
-				<li><a href="#">products</a></li>
-				<li><a href="#">contact</a></li>
+				<li><a href="#">Products</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 			
-			<div class="hamburger"><div class="bar 1"></div>
+			<div class="hamburger">
+<div class="bar 1"></div>
 <div class="bar 2"></div>
 <div class="bar 3"></div>
 </div>
@@ -39,8 +40,10 @@
 
 
 	<div class="goods-section1">
-		<h1>type 1 product</h1>
-		<p>some text about ptoduct</p>
+		<div class="section-header">
+			<h1>Body sprays</h1>
+		<p>some text about ptoduct</p></div>
+		
 <div class="four-row-flexbox">
 	<div class="row">
 		<img src="">
