--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="row">
 				<img class="product-images" src="Bacarrat-rogue.jpg">
 				<div class="row-body">
-					<h3 class="row-head-text">Bacarrat rouge</h3>
+					<h3 class="row-head-text">Bacarrat rouge 540</h3>
 					<p>Perfumed body spray 200ml</p>
 					<h3 class="row-price-text">N2000</h3>
 				</div>
@@ -128,7 +128,7 @@
 		<div class="row">
 			<img class="product-images" src="Bacarrat-rogue.jpg">
 			<div class="row-body">
-				<h3 class="row-head-text">bacarrat rouge</h3>
+				<h3 class="row-head-text">bacarrat rouge 540</h3>
 				<p>perfumed body spray 200ml</p>
 				<h3 class="row-price-text">N2000</h3>
 			</div>
@@ -180,7 +180,7 @@
 		<div class="row">
 			<img class="product-images" src="Bacarrat-rogue.jpg">
 			<div class="row-body">
-				<h3 class="row-head-text">bacarrat rouge </h3>
+				<h3 class="row-head-text">bacarrat rouge 540</h3>
 				<p>perfumed body spray 200ml</p>
 				<h3 class="row-price-text">N2000</h3>
 			</div>
