--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<div class="row">
 			<img class="product-images" src="Bacarrat-rogue.jpg">
 			<div class="row-body">
-				<h3 class="row-head-text">bacarrat rouge 540</h3>
+				<h3 class="row-head-text">Bacarrat rouge 540</h3>
 				<p>perfumed body spray 200ml</p>
 				<h3 class="row-price-text">N2000</h3>
 			</div>
@@ -180,7 +180,7 @@
 		<div class="row">
 			<img class="product-images" src="Bacarrat-rogue.jpg">
 			<div class="row-body">
-				<h3 class="row-head-text">bacarrat rouge 540</h3>
+				<h3 class="row-head-text">Bacarrat rouge 540</h3>
 				<p>perfumed body spray 200ml</p>
 				<h3 class="row-price-text">N2000</h3>
 			</div>
@@ -204,13 +204,14 @@
 	<h1 class="no-money-header">See something you like but dont have cash yet?<br>Dont worry we got you covered</h1>
 	<h3 class="no-money-text">Kindly fill this form so we can get in touch with you and send you updates</h3></div>
 	<div class="form">
-		<form action="https://thank-you-page" method="post">
-		<input class="email-field" type="text" name="name" required="required" placeholder="Your Name...">
-		<input class="email-field" type="number" name="phone" required="required" placeholder="Your number...">
+		<form action="form_processor.php" method="post" >
+		<input class="email-field" type="text" name="name" required="required" placeholder="Your Full Name...">
+		<input class="email-field" type="number" name="Phone" required="required" placeholder="Your number...">
 		<input class="email-field" type="email" name="email" required="required" placeholder="Your email...">
 		<button type="submit" class="submit-button">Submit</button>
 	</div></form>
 </div>
+
 
 
 <script src="index.js">
